test/success/implicits/mutable/main.sk
module Main {

implicit mut myImplicit: Int

fn foo() {
    assert(myImplicit == 42);
    myImplicit = 43;
}

fn foo2() {
    assert(myImplicit == 43);
}

fn main() {
    let mut counter = 42;
    with myImplicit = counter {
        foo();
        foo2();
    }
}

}
