test/errors/implicit/writing_immutable_implicit/main.sk
module Main {

implicit myImplicit: Int

fn foo() {
    assert(myImplicit == 42);
    myImplicit = 43;
}

fn main() {
    let mut counter = 42;
    with myImplicit = counter {
        foo();
    }
}

}
